--- a/themes/best-bc/style.css
+++ b/themes/best-bc/style.css
@@ -2029,7 +2029,7 @@ object {
 
 /* History page */
 .history-intro-article {
-  padding: 0 80px;
+  padding: 0 50px;
   line-height: 2; }
   @media (min-width: 620px) {
     .history-intro-article {
@@ -2037,7 +2037,7 @@ object {
       padding-top: 40px; } }
 
 .history-intro-article-2 {
-  padding: 0 80px;
+  padding: 0 50px;
   line-height: 2; }
   @media (min-width: 620px) {
     .history-intro-article-2 {
@@ -2074,7 +2074,7 @@ object {
         height: 275px; } }
   .history-content-1 .history-info p {
     font-size: 1.3rem;
-    padding: 0 72px;
+    padding: 0 40px;
     line-height: 2;
     text-align: center; }
     @media (min-width: 620px) {
@@ -2179,9 +2179,10 @@ object {
         display: none; } }
   .history-content-2 p {
     font-size: 1.2rem;
-    padding: 0 72px;
+    padding: 0 20px;
     line-height: 2;
-    text-align: center; }
+    text-align: left;
+    font-family: "Mukta", sans-serif; }
     @media (min-width: 620px) {
       .history-content-2 p {
         padding: 0 240px; } }
